fixed whitespace at bottom of page, removed a couple files

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,16 @@
 .root {
   font-family: fantasy;
+}
+
+.div {
   position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
+html, body {
+  height: 100%;
+  width: 100%;
 }
